--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
       <p class="subtitle is-4">CVPR 2026 Submission</p>
       <div class="is-size-5" style="margin-top: 1rem;"><strong>Jungsu Kim</strong></div>
       <div class="pub-links" style="margin-top: 1.25rem;">
-        <a class="button is-dark is-rounded" href="#"><i class="fas fa-file-pdf"></i>&nbsp;Paper</a>
-        <a class="button is-dark is-rounded" href="#"><i class="ai ai-arxiv"></i>&nbsp;arXiv</a>
+        <!-- <a class="button is-dark is-rounded" href="#"><i class="fas fa-file-pdf"></i>&nbsp;Paper</a>
+        <a class="button is-dark is-rounded" href="#"><i class="ai ai-arxiv"></i>&nbsp;arXiv</a> -->
         <a class="button is-dark is-rounded" href="#"><i class="fab fa-github"></i>&nbsp;Code</a>
-        <a class="button is-dark is-rounded" href="#"><i class="fa-regular fa-folder-open"></i>&nbsp;Data</a>
+        <!-- <a class="button is-dark is-rounded" href="#"><i class="fa-regular fa-folder-open"></i>&nbsp;Data</a> -->
       </div>
     </div>
   </div>
@@ -78,16 +78,12 @@
 </section>
 
 <section class="section" id="figure">
-  <div class="container is-max-desktop">
-    <h2 class="title is-3"><i class="fa-regular fa-image"></i> Paper Figure</h2>
-    <div class="figure-placeholder">
-      <div>
-        <p style="font-weight:600;">Insert Figure 1 Here</p>
-        <p style="font-size:0.9rem;">(e.g., static/images/figure1.png)</p>
-      </div>
-    </div>
-    <p class="figure-caption">Figure 1. HDC framework: phrase-level generation, waveform-aware enhancement, and global plausibility with optional text stylization.</p>
-  </div>
+    <figure class="image is-16by9">
+    <img src="image/cvpr_fig1_revise.png" alt="HDC main figure">
+    </figure>
+    <p class="figure-caption">
+    Figure 1. HDC framework: phrase-level generation, waveform-aware enhancement, and global plausibility.
+    </p>
 </section>
 
 <section class="section" id="method">
@@ -109,19 +105,19 @@
 <section class="section" id="bibtex">
   <div class="container is-max-desktop content">
     <h2 class="title is-3"><i class="fa-solid fa-code"></i> BibTeX</h2>
-<pre><code>@inproceedings{kim2026hdc,
+<!-- <pre><code>@inproceedings{kim2026hdc,
   author    = {Jungsu Kim},
   title     = {HDC: Hierarchical Diffusion Model for Choreography},
   booktitle = {Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR)},
   year      = {2026},
-}</code></pre>
+}</code></pre> -->
   </div>
 </section>
 
 <footer class="footer">
   <div class="container">
     <div class="content has-text-centered">
-      <p>© <span id="year"></span> Jungsu Kim. Built with Bulma.</p>
+      <!-- <p>© <span id="year"></span> Jungsu Kim. Built with Bulma.</p> -->
     </div>
   </div>
 </footer>
