--- a/index.html
+++ b/index.html
@@ -78,14 +78,15 @@
 </section>
 
 <section class="section" id="figure">
-    <figure class="image is-16by9">
-    <img src="image/cvpr_fig1_revise.png" alt="HDC main figure">
-    </figure>
-    <p class="figure-caption">
+  <figure class="image" style="max-width: 800px; margin: 0 auto;">
+    <img src="image/cvpr_fig1_revise.png"
+         alt="HDC main figure"
+         style="width: 60%; height: auto; border-radius: 8px;">
+  </figure>
+  <p class="figure-caption">
     Figure 1. HDC framework: phrase-level generation, waveform-aware enhancement, and global plausibility.
-    </p>
+  </p>
 </section>
-
 <section class="section" id="method">
   <div class="container is-max-desktop">
     <h2 class="title is-3"><i class="fa-solid fa-diagram-project"></i> Method</h2>
