--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
           <video src="video/gt_goodboy.mp4" controls muted loop playsinline></video>
         </div>
         <div class="dataset-desc">
-          <p><strong>Dataset Overview.</strong> Provide an overview of the curated music–dance pairs, annotation strategy (phrases, beats, waveform proxies), and style labels utilized for semantic modulation. This placeholder paragraph can be expanded with statistics such as number of hours, phrase count, dancer diversity, and genre coverage.</p>
+          <p><strong>Dataset Overview.</strong> Provide an overview of the curated music–dance pairs, annotation strategy (phrases, beats, waveform proxies), and style labels utilized for semantic modulation.</p>
         </div>
       </div>
     </div>
